feat: mejorar SearchController con validaciones, cache middleware y documentación API
- Agregar validación de source con lista blanca (all, nih, local)
- Validar longitud máxima de query (100 chars)
- Migrar autenticación a Jwt (@AuthenticationPrincipal)
- Agregar middleware de cache en controlador (antes del use case)
- Mejorar logging con contexto (userId, source, page)
- Estandarizar respuestas de error con mensajes descriptivos
- Simplificar SearchUseCase removiendo lógica de cache duplicada
- Agregar documentación completa API.md para frontend